# Arduino-Filters

./: CMakeLists.txt  README.md  keywords.txt  library.properties
Coverage/: index-sort-f.html  index-sort-l.html  index.html
Doxygen/: annotated.html  classes.html  dir_000000_000010.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000010.html  dir_000001_000011.html  dir_000001_000012.html  dir_000002_000011.html  dir_000002_000012.html  dir_000003_000002.html  dir_000003_000012.html  dir_000005_000001.html  dir_000005_000003.html  dir_000005_000009.html  dir_000005_000012.html  dir_000006_000012.html  dir_000007_000000.html  dir_000008_000001.html  dir_000008_000003.html  dir_000008_000005.html  dir_000008_000006.html  dir_000008_000010.html  dir_000008_000012.html  dir_000008_000017.html  dir_000009_000005.html  dir_000009_000012.html  dir_000010_000011.html  dir_000010_000012.html  dir_000011_000012.html  dir_000012_000002.html  dir_000012_000008.html  dir_000012_000015.html  dir_000012_000017.html  dir_000013_000000.html  dir_000014_000003.html  dir_000016_000012.html  dir_000017_000012.html  dir_15b6432dff6a6d357bf70f8fbf2cdf14.html  dir_15b6432dff6a6d357bf70f8fbf2cdf14_dep.map  (+166 more)
docs/: README.md
doxygen/: Doxyfile  header.html
examples/: examples.dox
test/: CMakeLists.txt
test/Filters/: test-BiQuad.cpp  test-Butterworth.cpp  test-Butterworth.py  test-FIRFilter.cpp  test-FIRFilter.py  test-FixedPoint.cpp  test-IIRFilter.cpp  test-IIRFilter.py  test-MedianFilter.cpp  test-MedianFilter.py  test-SMA.cpp  test-SMA.py  test-SOSFilter.cpp
(+2506 files in other folders)
